--- a/front/public/index.html
+++ b/front/public/index.html
@@ -7,7 +7,7 @@
     <title>Dashboard</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+  <div id="root"></div>
+  <!-- Removed dev-only Vite module script. CRA injects bundled JS automatically in production build -->
   </body>
 </html>
